[package]
name = "grailshadr"
version = "0.1.0"
edition = "2021"


[lib]
name = "grailshadr"
path = "src/lib.rs"

[dependencies]

[build-dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }

[features]
default = ["gggrx_0660pm_sha"]

gggrx_0660pm_sha = []
gggrx_0900c_bouguer_sha = []
gggrx_0900c_sha = []
gggrx_1200a_bouguer_sha = []
gggrx_1200a_sha = []
gggrx_1200b_lambda1_sha = []
gggrx_1200b_sha = []
gggrx_1200l_bouguer_sha = []
gggrx_1200l_sha = []
jggrx_0420a_sha = []
jggrx_0660b_sha = []
jggrx_0900c_sha = []
jggrx_0900d_sha = []
jggrx_1500e_sha = []
jggrx_1800f_me_sha = []
jggrx_1800f_sha = []

all = [
    "gggrx_0660pm_sha", "gggrx_0900c_bouguer_sha", "gggrx_0900c_sha",
    "gggrx_1200a_bouguer_sha", "gggrx_1200a_sha", "gggrx_1200b_lambda1_sha",
    "gggrx_1200b_sha", "gggrx_1200l_bouguer_sha", "gggrx_1200l_sha",
    "jggrx_0420a_sha", "jggrx_0660b_sha", "jggrx_0900c_sha",
    "jggrx_0900d_sha", "jggrx_1500e_sha", "jggrx_1800f_me_sha",
    "jggrx_1800f_sha"
]
